--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">Tetris with life</string>
+    <string name="new_game_main_button">New game</string>
+    <string name="options_main_button">Options</string>
+    <string name="exit_main_button">Exit</string>
+
+    <string name="name_options_textview">Name:</string>
+    <string name="name_options_editview">Enter name</string>
+    <string name="exit_options_button">Exit</string>
+
+    <string name="new_game_game_button">New game</string>
+    <string name="pause_game_button">Pause</string>
+    <string name="resume_game_button">Resume</string>
+    <string name="exit_game_button">Exit</string>
+    <string name="scores_game_textview">Scores:</string>
+    <string name="record_game_textview">Record:</string>
+    <string name="infobreath_game_textview">Suffocating. Seconds left:</string>
+
+    <string name="left_game_button">Left</string>
+    <string name="right_game_button">Right</string>
+    <string name="down_game_button">Down</string>
+    <string name="rotate_game_button">Rotate</string>
 </resources>
