--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -11,9 +11,10 @@
     <string name="pause_game_button">Пауза</string>
     <string name="resume_game_button">Продолжить</string>
     <string name="exit_game_button">Выход</string>
-    <string name="scores_game_textview">Очки: %1$s</string>
-    <string name="record_game_textview">Рекорд: %1$s</string>
-    <string name="infobreath_game_textview">Задыхаюсь. Осталось секунд</string>
+    <string name="scores_game_textview">Очки:\n %1$s</string>
+    <string name="record_game_textview">Рекорд:\n %1$s</string>
+    <string name="infobreath_game_textview">Дыхания\n Осталось на секунд:\n %1$s</string>
+
     <string name="left_game_button">Влево</string>
     <string name="right_game_button">Вправо</string>
     <string name="down_game_button">Вниз</string>
